<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intentDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_ticket"
    android:elevation="2dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackgroundBorderless"
    android:focusable="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_overlay="true"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/user4" />

    <TextView
        android:id="@+id/tvName"
        style="@style/Headline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/civAvatar"
        app:layout_constraintTop_toTopOf="@+id/civAvatar" />

    <View
        android:id="@+id/dividing"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/civAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvRepo"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/follow"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/tvFollowers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/civAvatar"
        app:layout_constraintTop_toBottomOf="@+id/dividing" />

    <TextView
        android:id="@+id/tvFollowers"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/follow"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvRepo"
        app:layout_constraintTop_toBottomOf="@+id/dividing" />

    <TextView
        android:id="@+id/tvFollowing"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/follow"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFollowers"
        app:layout_constraintTop_toBottomOf="@+id/dividing" />

    <TextView
        android:id="@+id/Repo"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/repo"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/tvRepo"
        app:layout_constraintStart_toStartOf="@+id/tvRepo"
        app:layout_constraintTop_toBottomOf="@+id/tvRepo" />

    <TextView
        android:id="@+id/Followers"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/followers"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
        app:layout_constraintStart_toStartOf="@+id/tvFollowers"
        app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

    <TextView
        android:id="@+id/Following"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/following"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/tvFollowing"
        app:layout_constraintStart_toStartOf="@+id/tvFollowing"
        app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />


</androidx.constraintlayout.widget.ConstraintLayout>